# session-hub

./: .gitignore  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  USAGE.md  install-app.sh  install-pipx.sh  install.bat  install.sh  pyproject.toml  run.sh  session-hub-launch.sh  session-hub.spec
.github/workflows/: ci.yml  release.yml
scripts/: ensure-gui-deps.sh  pyinstaller_entry.py
sessionhub/: active.py  app.py  config.py  db.py  desktop.py  desktop_install.py  parse_antigravity.py  parse_claude.py  pricing.py  resume.py  scanner.py  standalone.py
sessionhub/static/: app.js  index.html  style.css
tests/: conftest.py  test_app_sessions.py  test_desktop_install.py  test_ensure_gui_deps.py  test_parse_claude.py  test_py38_compat.py  test_resume_build_command.py  test_scanner_upsert.py  test_standalone_packaging.py  test_static_nocache.py
