[project]
name = "session-hub"
version = "0.1.0"
description = "Local dashboard for Claude Code and Antigravity session history"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
# Native desktop window (GTK/WebKit on Linux, WKWebView on macOS, WebView2 on
# Windows). Browser mode and the standalone binary do NOT need this.
native = [
    "pywebview>=5",
]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]
build = [
    "pyinstaller>=6",
]

[project.scripts]
session-hub = "sessionhub.app:main"
session-hub-app = "sessionhub.desktop:main"
session-hub-standalone = "sessionhub.standalone:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sessionhub"]

[tool.setuptools.package-data]
sessionhub = ["static/*"]
